Changed container types on index page and edited welcome studio photo and youtube video class rules for better style and to make it more responsive.

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     </header>
     <main>
         <div class="container-fluid silver-sand-bg">
-            <div class="row align-items-center">
-                <div class="col-md-6 d-flex justify-content-center">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-lg-4 center-img">
                     <img class="studio-index" src="/assets/images/studio-index.jpg" alt="Kendrick Lamar in studio">
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-4">
                     <p class="general-content welcome">Welcome to the home of TDE's Kendrick Lamar, One of the most
                         influential
                         artists of his
@@ -84,7 +84,7 @@
         </div>
         <div class="container-fluid spanish-grey-bg">
             <div class="row">
-                <div class="col-12 heart-5-index">
+                <div class="col-12 center-img">
                     <img class="heart-5-index-img" src="/assets/images/heart-5-index.jpg"
                         alt="Logo for new single heart V">
                     <br>
@@ -95,15 +95,16 @@
             </div>
         </div>
         <div class="container-fluid silver-sand-bg">
-            <div class="row align-items-center">
-                <div class="col-sm-6 d-flex justify-content-center">
-                    <!-- width="560" height="315" -->
-                    <iframe class="index-video" src="https://www.youtube.com/embed/drV0QatqbRU" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-sm-6">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/drV0QatqbRU" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
                 </div>
-                <div class="col-sm-6 d-flex justify-content-center">
-                    <h4 class="subtitle-2 index-video-title">Kendrick Lamar - These Walls (Explicit) ft. Bilal, Anna
+                <div class="col-sm-4 index-video-title">
+                    <h4 class="subtitle-2">Kendrick Lamar - These Walls (Explicit) ft. Bilal, Anna
                         Wise, Thundercat</h4>
                 </div>
             </div>
