Changed container types on the music page and edited media rules for album covers for better style and to make it more responsive.

--- a/music.html
+++ b/music.html
@@ -30,7 +30,6 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
-
                 <ul class="navbar-nav Smr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
@@ -67,13 +66,13 @@
     </header>
     <main>
         <div class="container-fluid spanish-grey-bg">
-            <div class="row align-items-center">
-                <div class="col-md-4 justify-content-center">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-lg-4 center-img ">
                     <img class="album-covers" src="assets/images/bp-album.jpg" alt="Black Panther album cover" />
                 </div>
-                <div class="col-md-8 ">
+                <div class="col-lg-6 ">
                     <h3 class="subtitle-1 album-title">Black Panther The Album Music From And Inspired By</h3>
-                    <div class="row">
+                    <div class="row justify-content-center">
                         <div class="col-md-6">
                             <ul class="tracklist ">
                                 <li>1 Black Panther</li>
@@ -99,7 +98,10 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <p class="welcome"><a href="about.html" class="btn info-button" role="button">Buy/Stream</a>
+                            <p class="welcome">
+                                <a href="http://smarturl.it/BlackPantherAlbum" class="btn info-button" role="button">
+                                    Buy/Stream
+                                </a>
                             </p>
                         </div>
                     </div>
@@ -107,13 +109,13 @@
             </div>
         </div>
         <div class="container-fluid silver-sand-bg">
-            <div class="row align-items-center">
-                <div class="col-md-4 justify-content-center">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-lg-4 center-img">
                     <img class="album-covers" src="assets/images/damn-album.jpeg" alt="DAMN Album Cover" />
                 </div>
-                <div class="col-md-8 ">
+                <div class="col-lg-6 ">
                     <h3 class="subtitle-1 album-title">DAMN. COLLECTORS EDITION.</h3>
-                    <div class="row">
+                    <div class="row justify-content-center">
                         <div class="col-md-6">
                             <ul class="tracklist ">
                                 <li>1 DUCKWORTH.</li>
@@ -139,7 +141,8 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <p class="welcome"><a href="about.html" class="btn info-button" role="button">Buy/Stream</a>
+                            <p class="welcome"><a href="http://smarturl.it/damn" class="btn info-button"
+                                    role="button">Buy/Stream</a>
                             </p>
                         </div>
                     </div>
@@ -147,14 +150,14 @@
             </div>
         </div>
         <div class="container-fluid spanish-grey-bg">
-            <div class="row align-items-center">
-                <div class="col-md-4 justify-content-center">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-lg-4 center-img">
                     <img class="album-covers" src="assets/images/tpab-album.jpg"
                         alt="To Pimp A Butterfly Album Cover" />
                 </div>
-                <div class="col-md-8 ">
+                <div class="col-lg-6 ">
                     <h3 class="subtitle-1 album-title">To Pimp A Butterfly</h3>
-                    <div class="row">
+                    <div class="row justify-content-center">
                         <div class="col-md-6">
                             <ul class="tracklist ">
                                 <li>1 Wesley's Theory</li>
@@ -164,7 +167,7 @@
                                 <li>5 These Walls</li>
                                 <li>6 u</li>
                                 <li>7 Alright</li>
-                                <li>8 Bloody Waters (with Anderson .Paak & James Blake)</li>
+                                <li>8 For Sale? - Interlude</li>
                             </ul>
                         </div>
                         <div class="col-md-6">
@@ -181,7 +184,8 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <p class="welcome"><a href="about.html" class="btn info-button" role="button">Buy/Stream</a>
+                            <p class="welcome"><a href="https://open.spotify.com/album/7ycBtnsMtyVbbwTfJwRjSP"
+                                    class="btn info-button" role="button">Buy/Stream</a>
                             </p>
                         </div>
                     </div>
