added center-img class to image on tour page for styling purposes

--- a/tour.html
+++ b/tour.html
@@ -130,7 +130,7 @@
                     </div>
                     <!-- Credit ID= 3 End -->
                 </div>
-                <div class="col-md-4 justify-content-center">
+                <div class="col-md-4 center-img">
                     <img class="album-covers" src="assets/images/kenny-tour-red.jpg"
                         alt="Kendrick Lamar’s performance at the 2018 Grammy awards" />
                 </div>
