--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
         <div class="container-fluid silver-sand-bg">
             <div class="row justify-content-center">
                 <div class="col-lg-4 ">
-                    <h3 class="subtitle-1">WHO IS KENDRICK LAMAR?</h3>
+                    <h3 class="subtitle-1 about-titles">WHO IS KENDRICK LAMAR?</h3>
                     <p class="general-content">
                         Kendrick Lamar Duckworth, who performs as Kendrick Lamar, was born in Compton, California, on
                         June 17, 1987. After writing stories as a child, he put to music some lyrics about the rough
@@ -86,7 +86,7 @@
                         increasingly popular mix tapes, which brought him to the attention of hip-hop super-producer Dr.
                         Dre. Lamar's debut major-label recording, good kid, m.A.A.d City, was released to great acclaim
                         and impressive sales for an up-and-coming recording artist. He continued to receive accolades
-                        for his 2015 album, To Pimp a Butterfly, and his 2017 follow-up, DAMN.; both won Grammys for
+                        for his 2015 album, To Pimp a Butterfly, and his 2017 follow-up, DAMN. both won Grammys for
                         Best Rap Album, while DAMN. also made history as the first of its genre to earn a Pulitzer
                         Prize.
                     </p>
@@ -100,7 +100,7 @@
         <div class="container-fluid spanish-grey-bg">
             <div class="row justify-content-center">
                 <div class="col-lg-4 ">
-                    <h3 class="subtitle-1">BACKGROUND AND EARLY LIFE</h3>
+                    <h3 class="subtitle-1 about-titles">BACKGROUND AND EARLY LIFE</h3>
                     <p class="general-content">
                         Kendrick Lamar Duckworth (who dropped his last name to perform as Kendrick Lamar) was born in
                         Compton, California, on June 17, 1987. His parents had moved to Compton from Chicago to escape
