--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
         <!-- Hero image end-->
     </header>
     <main>
-        <div class="container-fluid silver-sand-bg">
+        <div class="container-fluid spanish-grey-bg">
             <div class="row">
                 <div class="col-12">
                     <h3 class="subtitle-1 rep-label">REPRESENTATION</h3>
@@ -118,7 +118,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid spanish-grey-bg">
+        <div class="container-fluid silver-sand-bg">
             <div class="row">
                 <div class="col-sm-6">
                     <h4 class="subtitle-2">SOCIAL</h4>
@@ -152,6 +152,30 @@
                     </a>
                 </div>
             </div>
+        </div>
+        <div class="container-fluid spanish-grey-bg">
+            <!-- Credit ID=4 Start -->
+            <form action="action_page.php">
+
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                <label for="country">Country</label>
+                <select id="country" name="country">
+                    <option value="australia">Australia</option>
+                    <option value="canada">Canada</option>
+                    <option value="usa">USA</option>
+                </select>
+
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+                <input class="btn info-button" type="submit" value="Submit">
+            </form>
+            <!-- Credit ID=4 End -->
         </div>
     </main>
     <!-- Social links footer Start-->
