--- a/contact.html
+++ b/contact.html
@@ -154,6 +154,7 @@
             </div>
         </div>
         <div class="container-fluid spanish-grey-bg">
+            <h3 class="subtitle-1 rep-label">Want to get in touch?</h3>
             <!-- Credit ID=4 Start -->
             <form action="action_page.php">
 
@@ -162,6 +163,9 @@
 
                 <label for="lname">Last Name</label>
                 <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Your email..">
 
                 <label for="country">Country</label>
                 <select id="country" name="country">
