Added youtube embedded videos to videos page along with responsive class sets

--- a/videos.html
+++ b/videos.html
@@ -11,15 +11,6 @@
     <!-- Latest compiled and minified CSS - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    <!-- jQuery library - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <!-- Popper JS - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
-    <!-- Latest compiled JavaScript - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
     <!-- Font Awesome - https://fontawesome.com/ -->
     <script src="https://kit.fontawesome.com/33a3b91496.js" crossorigin="anonymous"></script>
 
@@ -33,12 +24,12 @@
 <body>
     <header>
         <!-- Navbar Start-->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
                 <ul class="navbar-nav Smr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
@@ -74,9 +65,113 @@
         </div>
         <!-- Hero image end-->
     </header>
-    <section>
-
-    </section>
+    <main>
+        <div class="container-fluid silver-sand-bg">
+            <div class="row">
+                <div class="col-lg-6 col-xl-3">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/JQbjS0_ZfJ0" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-3">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/ox7RsX1Ee34" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-3">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/bhCfQ8BGow8" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-3">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/4wZytWFm7x0" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-xl-3 ">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/glaG64Ao7sM" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-3 ">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/NLZRYQMLDW4" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-3 ">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/tvTRZJ-4EyI" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-3 ">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/hRK7PVJFbS8" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-xl-3 ">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/drV0QatqbRU" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-3 ">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/_ZTYgq4EoRo" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-3 ">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/Z-48u_uWMHY" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-3 ">
+                    <div class="video-container">
+                        <iframe class="music-videos" src="https://www.youtube.com/embed/Dlh-dzB2U4Y" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- Social links footer Start-->
     <footer class="container-fluid">
         <div class="row">
             <div class="col-2 sl-footer">
@@ -117,7 +212,17 @@
                 </a>
             </div>
         </div>
+        <!-- Social links footer End-->
+
     </footer>
+    <!-- jQuery library - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript - https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
