murged subtitle classes into one class rule set as they were both identicle rule sets. updated pages to new class names

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
         <div class="container-fluid silver-sand-bg">
             <div class="row justify-content-center">
                 <div class="col-lg-4 ">
-                    <h3 class="subtitle-1 about-titles">WHO IS KENDRICK LAMAR?</h3>
+                    <h3 class="subtitle about-titles">WHO IS KENDRICK LAMAR?</h3>
                     <p class="general-content">
                         Kendrick Lamar Duckworth, who performs as Kendrick Lamar, was born in Compton, California, on
                         June 17, 1987. After writing stories as a child, he put to music some lyrics about the rough
@@ -100,7 +100,7 @@
         <div class="container-fluid spanish-grey-bg">
             <div class="row justify-content-center">
                 <div class="col-lg-4 ">
-                    <h3 class="subtitle-1 about-titles">BACKGROUND AND EARLY LIFE</h3>
+                    <h3 class="subtitle about-titles">BACKGROUND AND EARLY LIFE</h3>
                     <p class="general-content">
                         Kendrick Lamar Duckworth (who dropped his last name to perform as Kendrick Lamar) was born in
                         Compton, California, on June 17, 1987. His parents had moved to Compton from Chicago to escape
