--- a/music.html
+++ b/music.html
@@ -71,7 +71,7 @@
                     <img class="album-covers" src="assets/images/bp-album.jpg" alt="Black Panther album cover" />
                 </div>
                 <div class="col-lg-6 ">
-                    <h3 class="subtitle-1 album-title">Black Panther The Album Music From And Inspired By</h3>
+                    <h3 class="subtitle album-title">Black Panther The Album Music From And Inspired By</h3>
                     <div class="row justify-content-center">
                         <div class="col-md-6">
                             <ul class="tracklist ">
@@ -114,7 +114,7 @@
                     <img class="album-covers" src="assets/images/damn-album.jpeg" alt="DAMN Album Cover" />
                 </div>
                 <div class="col-lg-6 ">
-                    <h3 class="subtitle-1 album-title">DAMN. COLLECTORS EDITION.</h3>
+                    <h3 class="subtitle album-title">DAMN. COLLECTORS EDITION.</h3>
                     <div class="row justify-content-center">
                         <div class="col-md-6">
                             <ul class="tracklist ">
@@ -156,7 +156,7 @@
                         alt="To Pimp A Butterfly Album Cover" />
                 </div>
                 <div class="col-lg-6 ">
-                    <h3 class="subtitle-1 album-title">To Pimp A Butterfly</h3>
+                    <h3 class="subtitle album-title">To Pimp A Butterfly</h3>
                     <div class="row justify-content-center">
                         <div class="col-md-6">
                             <ul class="tracklist ">
