--- a/tour.html
+++ b/tour.html
@@ -78,7 +78,7 @@
         <div class="container-fluid silver-sand-bg">
             <div class="row justify-content-center">
                 <div class="col-12">
-                    <h3 class="subtitle-1 rep-label">CURRENT TOUR DATES</h3>
+                    <h3 class="subtitle rep-label">CURRENT TOUR DATES</h3>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -86,46 +86,46 @@
                     <!-- Credit ID= 3 Start -->
                     <div class="history-items">
                         <div class="timeline-item" data-dates="FEB 07">
-                            <h5 class="subtitle-1">DUBLIN - 3ARENA</h5>
+                            <h5 class="subtitle">DUBLIN - 3ARENA</h5>
                         </div>
                         <div class="timeline-item" data-dates="FEB 09">
-                            <h5 class="subtitle-1">MANCHESTER - MANCHESTER ARENA</h5>
+                            <h5 class="subtitle">MANCHESTER - MANCHESTER ARENA</h5>
                         </div>
                         <div class="timeline-item" data-dates="FEB 11">
-                            <h5 class="subtitle-1">GLASGOW - THE SSE HYDRO</h5>
+                            <h5 class="subtitle">GLASGOW - THE SSE HYDRO</h5>
                         </div>
                         <div class="timeline-item" data-dates="FEB 12">
-                            <h5 class="subtitle-1">LONDON - THE O2</h5>
+                            <h5 class="subtitle">LONDON - THE O2</h5>
                         </div>
                         <div class="timeline-item" data-dates="FEB 13">
-                            <h5 class="subtitle-1">LONDON - THE O2</h5>
+                            <h5 class="subtitle">LONDON - THE O2</h5>
                         </div>
                         <div class="timeline-item" data-dates="FEB 15">
-                            <h5 class="subtitle-1">FRANKFURT - FESTHALLE</h5>
+                            <h5 class="subtitle">FRANKFURT - FESTHALLE</h5>
                         </div>
                         <div class="timeline-item" data-dates="FEB 22">
-                            <h5 class="subtitle-1">COLOGNE - LANXESS ARENA</h5>
+                            <h5 class="subtitle">COLOGNE - LANXESS ARENA</h5>
                         </div>
                         <div class="timeline-item" data-dates="FEB 23">
-                            <h5 class="subtitle-1">AMSTERDAM - ZIGGO DOME</h5>
+                            <h5 class="subtitle">AMSTERDAM - ZIGGO DOME</h5>
                         </div>
                         <div class="timeline-item" data-dates="FEB 25">
-                            <h5 class="subtitle-1">PARIS - ACCORHOTELS ARENA</h5>
+                            <h5 class="subtitle">PARIS - ACCORHOTELS ARENA</h5>
                         </div>
                         <div class="timeline-item" data-dates="FEB 27">
-                            <h5 class="subtitle-1">ANTWERP - SPORTPALEIS</h5>
+                            <h5 class="subtitle">ANTWERP - SPORTPALEIS</h5>
                         </div>
                         <div class="timeline-item" data-dates="MAR 01">
-                            <h5 class="subtitle-1">COPENHAGEN - ROYAL ARENA</h5>
+                            <h5 class="subtitle">COPENHAGEN - ROYAL ARENA</h5>
                         </div>
                         <div class="timeline-item" data-dates="MAR 02">
-                            <h5 class="subtitle-1">OSLO TELENOR - ARENA</h5>
+                            <h5 class="subtitle">OSLO TELENOR - ARENA</h5>
                         </div>
                         <div class="timeline-item" data-dates="MAR 03">
-                            <h5 class="subtitle-1">STOCKHOLM - ERICSSON GLOBE</h5>
+                            <h5 class="subtitle">STOCKHOLM - ERICSSON GLOBE</h5>
                         </div>
                         <div class="timeline-item" data-dates="MAR 05">
-                            <h5 class="subtitle-1">BERLIN - MERCEDES-BENZ ARENA</h5>
+                            <h5 class="subtitle">BERLIN - MERCEDES-BENZ ARENA</h5>
                         </div>
                     </div>
                     <!-- Credit ID= 3 End -->
