--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                     <img class="heart-5-index-img" src="/assets/images/heart-5-index.jpg"
                         alt="Logo for new single heart V">
                     <br>
-                    <h3 class="subtitle-1">THE HEART V</h3>
+                    <h3 class="subtitle">THE HEART V</h3>
                     <br>
-                    <h4 class="subtitle-2">RELEASE DATE TO BE ANNOUNCED</h4>
+                    <h4 class="subtitle">RELEASE DATE TO BE ANNOUNCED</h4>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 index-video-title">
-                    <h4 class="subtitle-2">Kendrick Lamar - These Walls (Explicit) ft. Bilal, Anna
+                    <h4 class="subtitle">Kendrick Lamar - These Walls (Explicit) ft. Bilal, Anna
                         Wise, Thundercat</h4>
                 </div>
             </div>
