changed subtitle classes to reflect new class names

--- a/contact.html
+++ b/contact.html
@@ -79,13 +79,13 @@
         <div class="container-fluid spanish-grey-bg">
             <div class="row">
                 <div class="col-12">
-                    <h3 class="subtitle-1 rep-label">REPRESENTATION</h3>
+                    <h3 class="subtitle rep-label">REPRESENTATION</h3>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-6 col-md-3">
-                    <h4 class="subtitle-2">LABEL</h4>
+                    <h4 class="subtitle">LABEL</h4>
                     <p>
                         Top Dog Entertainment<br>
                         info@txdxe.com<br>
@@ -93,7 +93,7 @@
                     </p>
                 </div>
                 <div class="col-sm-6 col-md-3">
-                    <h4 class="subtitle-2">MANAGEMENT</h4>
+                    <h4 class="subtitle">MANAGEMENT</h4>
                     <p>
                         Top Dog Entertainment<br>
                         punch@txdxe.com<br>
@@ -101,7 +101,7 @@
                     </p>
                 </div>
                 <div class="col-sm-6 col-md-3">
-                    <h4 class="subtitle-2">BOOKING</h4>
+                    <h4 class="subtitle">BOOKING</h4>
                     <p>
                         Top Dog Entertainment<br>
                         booking@txdxe.com<br>
@@ -109,7 +109,7 @@
                     </p>
                 </div>
                 <div class="col-sm-6 col-md-3">
-                    <h4 class="subtitle-2">PRESS</h4>
+                    <h4 class="subtitle">PRESS</h4>
                     <p>
                         Top Dog Entertainment<br>
                         press@txdxe.com<br>
@@ -121,7 +121,7 @@
         <div class="container-fluid silver-sand-bg">
             <div class="row">
                 <div class="col-sm-6">
-                    <h4 class="subtitle-2">SOCIAL</h4>
+                    <h4 class="subtitle">SOCIAL</h4>
                     <a target="_blank" href="https://www.facebook.com/kendricklamar">
                         <i class="fab fa-facebook"></i>
                         <span class="sr-only">Facebook</span>
@@ -137,7 +137,7 @@
 
                 </div>
                 <div class="col-sm-6">
-                    <h4 class="subtitle-2">STREAMING</h4>
+                    <h4 class="subtitle">STREAMING</h4>
                     <a target="_blank" href="https://open.spotify.com/artist/2YZyLoL8N0Wb9xBt1NhZWg">
                         <i class="fab page-tags fa-spotify"></i>
                         <span class="sr-only">Spotify</span>
@@ -154,7 +154,7 @@
             </div>
         </div>
         <div class="container-fluid spanish-grey-bg">
-            <h3 class="subtitle-1 rep-label">Want to get in touch?</h3>
+            <h3 class="subtitle rep-label">Want to get in touch?</h3>
             <!-- Credit ID=4 Start -->
             <form action="action_page.php">
 
