added class for padding directed at social/streaming links on contact page

--- a/contact.html
+++ b/contact.html
@@ -123,15 +123,15 @@
                 <div class="col-sm-6">
                     <h4 class="subtitle">SOCIAL</h4>
                     <a target="_blank" href="https://www.facebook.com/kendricklamar">
-                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-facebook sl-contact"></i>
                         <span class="sr-only">Facebook</span>
                     </a>
                     <a target="_blank" href="https://www.instagram.com/kendricklamar/">
-                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-instagram sl-contact"></i>
                         <span class="sr-only">Instagram</span>
                     </a>
                     <a target="_blank" href="https://twitter.com/kendricklamar?lang=en">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-twitter sl-contact"></i>
                         <span class="sr-only">Twitter</span>
                     </a>
 
@@ -139,15 +139,15 @@
                 <div class="col-sm-6">
                     <h4 class="subtitle">STREAMING</h4>
                     <a target="_blank" href="https://open.spotify.com/artist/2YZyLoL8N0Wb9xBt1NhZWg">
-                        <i class="fab page-tags fa-spotify"></i>
+                        <i class="fab page-tags fa-spotify sl-contact"></i>
                         <span class="sr-only">Spotify</span>
                     </a>
                     <a target="_blank" href="https://music.apple.com/gb/artist/kendrick-lamar/368183298">
-                        <i class="fab fa-apple"></i>
+                        <i class="fab fa-apple sl-contact"></i>
                         <span class="sr-only">Apple Music</span>
                     </a>
                     <a target="_blank" href="https://www.youtube.com/user/KendrickLamarVEVO">
-                        <i class="fab fa-youtube"></i>
+                        <i class="fab fa-youtube sl-contact"></i>
                         <span class="sr-only">Youtube</span>
                     </a>
                 </div>
