Added page folder for better orginisation and changed all links to adjust to new page locations. Also Adjusted photo links as the directory wass incorrect

--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,7 @@
     <script src="https://kit.fontawesome.com/33a3b91496.js" crossorigin="anonymous"></script>
 
     <!-- Main Css-->
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
 
     <!-- Page Title-->
     <title>Kendrick Lamar</title>
@@ -34,7 +34,7 @@
     <header>
         <!-- Navbar Start-->
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
+            <a class="navbar-brand nav-link" href="../index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -42,25 +42,25 @@
 
                 <ul class="navbar-nav Smr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="music.html">Music</a>
+                        <a class="nav-link" href="./music.html">Music</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="photos.html">Photos</a>
+                        <a class="nav-link" href="./photos.html">Photos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="videos.html">Videos</a>
+                        <a class="nav-link" href="./videos.html">Videos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="tour.html">Tour</a>
+                        <a class="nav-link" href="./tour.html">Tour</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="about.html">About<span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="./about.html">About<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="./contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -92,7 +92,7 @@
                     </p>
                 </div>
                 <div class="col-lg-4 about-picture-container">
-                    <img class="about-picture" src="assets/images/kendrick-lamar-best-rap-album-grammys.jpg"
+                    <img class="about-picture" src="../assets/images/kendrick-lamar-best-rap-album-grammys.jpg"
                         alt="kendrick at the grammys winning best rap album award">
                 </div>
             </div>
@@ -111,7 +111,7 @@
                     </p>
                 </div>
                 <div class="col-lg-4 about-picture-container">
-                    <img class="about-picture" src="assets/images/compton.jpg" alt="picture of compton blvd">
+                    <img class="about-picture" src="../assets/images/compton.jpg" alt="picture of compton blvd">
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -129,7 +129,7 @@
                     </p>
                 </div>
                 <div class="col-lg-4 about-picture-container">
-                    <img class="about-picture" src="assets/images/kendrick-lamar-studio.jpg"
+                    <img class="about-picture" src="../assets/images/kendrick-lamar-studio.jpg"
                         alt="kendrick lamar relaxing in studio">
                 </div>
             </div>
