--- a/pages/music.html
+++ b/pages/music.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/33a3b91496.js" crossorigin="anonymous"></script>
 
     <!-- Main Css-->
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
 
     <!-- Page Title-->
     <title>Kendrick Lamar</title>
@@ -25,32 +25,32 @@
     <header>
         <!-- Navbar Start-->
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
+            <a class="navbar-brand nav-link" href="../index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav Smr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="music.html">Music<span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="./music.html">Music<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="photos.html">Photos</a>
+                        <a class="nav-link" href="./photos.html">Photos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="videos.html">Videos</a>
+                        <a class="nav-link" href="./videos.html">Videos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="tour.html">Tour</a>
+                        <a class="nav-link" href="./tour.html">Tour</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="./contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +68,7 @@
         <div class="container-fluid spanish-grey-bg">
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-4 center-img ">
-                    <img class="album-covers" src="assets/images/bp-album.jpg" alt="Black Panther album cover" />
+                    <img class="album-covers" src="../assets/images/bp-album.jpg" alt="Black Panther album cover" />
                 </div>
                 <div class="col-lg-6 ">
                     <h3 class="subtitle album-title">Black Panther The Album Music From And Inspired By</h3>
@@ -111,7 +111,7 @@
         <div class="container-fluid silver-sand-bg">
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-4 center-img">
-                    <img class="album-covers" src="assets/images/damn-album.jpeg" alt="DAMN Album Cover" />
+                    <img class="album-covers" src="../assets/images/damn-album.jpeg" alt="DAMN Album Cover" />
                 </div>
                 <div class="col-lg-6 ">
                     <h3 class="subtitle album-title">DAMN. COLLECTORS EDITION.</h3>
@@ -152,7 +152,7 @@
         <div class="container-fluid spanish-grey-bg">
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-4 center-img">
-                    <img class="album-covers" src="assets/images/tpab-album.jpg"
+                    <img class="album-covers" src="../assets/images/tpab-album.jpg"
                         alt="To Pimp A Butterfly Album Cover" />
                 </div>
                 <div class="col-lg-6 ">
