--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <!-- Navbar Start-->
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
+            <a class="navbar-brand nav-link" href="../index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -36,22 +36,22 @@
                         <a class="nav-link active" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="music.html">Music</a>
+                        <a class="nav-link" href="pages/music.html">Music</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="photos.html">Photos</a>
+                        <a class="nav-link" href="pages/photos.html">Photos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="videos.html">Videos</a>
+                        <a class="nav-link" href="pages/videos.html">Videos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="tour.html">Tour</a>
+                        <a class="nav-link" href="pages/tour.html">Tour</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="pages/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="pages/contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +69,7 @@
         <div class="container-fluid silver-sand-bg">
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-4 center-img">
-                    <img class="studio-index" src="/assets/images/studio-index.jpg" alt="Kendrick Lamar in studio">
+                    <img class="studio-index" src="./assets/images/studio-index.jpg" alt="Kendrick Lamar in studio">
                 </div>
                 <div class="col-lg-4">
                     <p class="general-content welcome">Welcome to the home of TDE's Kendrick Lamar, One of the most
@@ -77,7 +77,8 @@
                         artists of his
                         generation known for his lyricism amazing delivery and ability to convey the deepest of messages
                         in his music.</p>
-                    <p class="welcome"><a href="about.html" class="btn info-button" role="button">LEARN MORE</a></p>
+                    <p class="welcome"><a href="./pages/about.html" class="btn info-button" role="button">LEARN MORE</a>
+                    </p>
                 </div>
 
             </div>
@@ -85,7 +86,7 @@
         <div class="container-fluid spanish-grey-bg">
             <div class="row">
                 <div class="col-12 center-img">
-                    <img class="heart-5-index-img" src="/assets/images/heart-5-index.jpg"
+                    <img class="heart-5-index-img" src="./assets/images/heart-5-index.jpg"
                         alt="Logo for new single heart V">
                     <br>
                     <h3 class="subtitle">THE HEART V</h3>
