--- a/pages/photos.html
+++ b/pages/photos.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/33a3b91496.js" crossorigin="anonymous"></script>
 
     <!-- Main Css-->
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
 
     <!-- Page Title-->
     <title>Kendrick Lamar</title>
@@ -25,7 +25,7 @@
     <header>
         <!-- Navbar Start-->
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
+            <a class="navbar-brand nav-link" href="../index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,25 +33,25 @@
 
                 <ul class="navbar-nav Smr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="music.html">Music</a>
+                        <a class="nav-link" href="./music.html">Music</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="photos.html">Photos<span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="./photos.html">Photos<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="videos.html">Videos</a>
+                        <a class="nav-link" href="./videos.html">Videos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="tour.html">Tour</a>
+                        <a class="nav-link" href="./tour.html">Tour</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="./contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -69,54 +69,54 @@
         <div class="container-fluid silver-sand-bg">
             <div class="row">
                 <div class="col-md-6 col-lg-3 photo-container">
-                    <img class="photo-gallery" src="assets/images/dave-chappelle-interview-cover.jpg"
+                    <img class="photo-gallery" src="../assets/images/dave-chappelle-interview-cover.jpg"
                         alt="portrait photo of kendrick lamar">
                 </div>
                 <div class="col-md-6 col-lg-3 photo-container">
-                    <img class="photo-gallery" src="assets/images/cortez.jpg"
+                    <img class="photo-gallery" src="../assets/images/cortez.jpg"
                         alt="kendirck lamar in all black with nike cortez shoes">
                 </div>
                 <div class="col-md-6 col-lg-3 photo-container">
-                    <img class="photo-gallery" src="assets/images/dave-chappelle-interview-cover-3.jpg"
+                    <img class="photo-gallery" src="../assets/images/dave-chappelle-interview-cover-3.jpg"
                         alt="kendrick lamar standing against a brick wall background">
                 </div>
                 <div class="col-md-6 col-lg-3 photo-container">
-                    <img class="photo-gallery" src="assets/images/damn-tour-element.jpg"
+                    <img class="photo-gallery" src="../assets/images/damn-tour-element.jpg"
                         alt="kendrick lamar standing on stage in black and white">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-3 photo-container">
-                    <img class="photo-gallery" src="assets/images/damn-tour-blur.jpg"
+                    <img class="photo-gallery" src="../assets/images/damn-tour-blur.jpg"
                         alt="kendrick lamar on stage with red lights in background">
                 </div>
                 <div class="col-md-6 col-lg-3 photo-container">
-                    <img class="photo-gallery" src="assets/images/damn-tour-crowd-grey.jpg"
+                    <img class="photo-gallery" src="../assets/images/damn-tour-crowd-grey.jpg"
                         alt="crowd at kendrick lamar concert">
                 </div>
                 <div class="col-md-6 col-lg-3 photo-container">
-                    <img class="photo-gallery" src="assets/images/damn-tour-backstage.jpg"
+                    <img class="photo-gallery" src="../assets/images/damn-tour-backstage.jpg"
                         alt="kendrick lamar standing against a brick wall background in black and white">
                 </div>
                 <div class="col-md-6 col-lg-3 photo-container">
-                    <img class="photo-gallery" src="assets/images/murals.jpg"
+                    <img class="photo-gallery" src="../assets/images/murals.jpg"
                         alt="kendrick lamar crouching in his highschool gym with platinum plaque">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-3 photo-container">
-                    <img class="photo-gallery" src="assets/images/bredren.jpg"
+                    <img class="photo-gallery" src="../assets/images/bredren.jpg"
                         alt="photo of kendrick lamar and peer J.cole">
                 </div>
                 <div class="col-md-6 col-lg-3 photo-container">
-                    <img class="photo-gallery" src="assets/images/dave-chappelle-interview-cover-2.jpg"
+                    <img class="photo-gallery" src="../assets/images/dave-chappelle-interview-cover-2.jpg"
                         alt="black and white phto of kendrick lamar">
                 </div>
                 <div class="col-md-6 col-lg-3 photo-container">
-                    <img class="photo-gallery" src="assets/images/kenny-beach.jpg" alt="kendrick lamar at the beach">
+                    <img class="photo-gallery" src="../assets/images/kenny-beach.jpg" alt="kendrick lamar at the beach">
                 </div>
                 <div class="col-md-6 col-lg-3 photo-container">
-                    <img class="photo-gallery" src="assets/images/momma.jpg"
+                    <img class="photo-gallery" src="../assets/images/momma.jpg"
                         alt="text conversation between kendrick and his mother showing her positive response to his album">
                 </div>
             </div>
