--- a/pages/tour.html
+++ b/pages/tour.html
@@ -24,7 +24,7 @@
     <script src="https://kit.fontawesome.com/33a3b91496.js" crossorigin="anonymous"></script>
 
     <!-- Main Css-->
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
 
     <!-- Page Title-->
     <title>Kendrick Lamar</title>
@@ -34,7 +34,7 @@
     <!-- Navbar Start-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
+            <a class="navbar-brand nav-link" href="../index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -42,25 +42,25 @@
 
                 <ul class="navbar-nav Smr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="music.html">Music</a>
+                        <a class="nav-link" href="./music.html">Music</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="photos.html">Photos</a>
+                        <a class="nav-link" href="./photos.html">Photos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="videos.html">Videos</a>
+                        <a class="nav-link" href="./videos.html">Videos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="tour.html">Tour<span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="./tour.html">Tour<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="./contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -131,7 +131,7 @@
                     <!-- Credit ID= 3 End -->
                 </div>
                 <div class="col-md-4 center-img">
-                    <img class="album-covers" src="assets/images/kenny-tour-red.jpg"
+                    <img class="album-covers" src="../assets/images/kenny-tour-red.jpg"
                         alt="Kendrick Lamar’s performance at the 2018 Grammy awards" />
                 </div>
             </div>
