--- a/pages/videos.html
+++ b/pages/videos.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/33a3b91496.js" crossorigin="anonymous"></script>
 
     <!-- Main Css-->
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
 
     <!-- Page Title-->
     <title>Kendrick Lamar</title>
@@ -25,7 +25,7 @@
     <header>
         <!-- Navbar Start-->
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand nav-link" href="index.html">Kendrick Lamar</a>
+            <a class="navbar-brand nav-link" href="../index.html">Kendrick Lamar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,25 +33,25 @@
 
                 <ul class="navbar-nav Smr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " href="index.html">Home</a>
+                        <a class="nav-link " href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="music.html">Music</a>
+                        <a class="nav-link" href="./music.html">Music</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="photos.html">Photos</a>
+                        <a class="nav-link" href="./photos.html">Photos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="videos.html">Videos<span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="./videos.html">Videos<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="tour.html">Tour</a>
+                        <a class="nav-link" href="./tour.html">Tour</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="./contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
